// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethodSelector should render correctly 1`] = `
<View
  pointerEvents="auto"
  style={false}
>
  <PulsingText
    showPulse={false}
    style={
      {
        "alignSelf": "center",
        "marginBottom": 4,
      }
    }
  >
    select payment method
  </PulsingText>
  <MeansOfPaymentSelect
    meansOfPayment={{}}
    setCurrency={[Function]}
    setPaymentMethod={[Function]}
  />
</View>
`;

exports[`PaymentMethodSelector should render correctly when disabled 1`] = `
<View
  pointerEvents="none"
  style={
    {
      "opacity": 0.33,
    }
  }
>
  <PulsingText
    showPulse={false}
    style={
      {
        "alignSelf": "center",
        "marginBottom": 4,
      }
    }
  >
    select payment method
  </PulsingText>
  <MeansOfPaymentSelect
    meansOfPayment={{}}
    setCurrency={[Function]}
    setPaymentMethod={[Function]}
  />
</View>
`;
